src/test/ui/associated-types/issue-63593.stderr
error[E0277]: the size for values of type `Self` cannot be known at compilation time
  --> $DIR/issue-63593.rs:9:5
   |
LL | trait MyTrait {
   | ------------- required by `MyTrait`
LL |     type This = Self;
   |     ^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `Self`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
help: consider further restricting `Self`
   |
LL | trait MyTrait: std::marker::Sized {
   |              ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
